--- a/_config.yml
+++ b/_config.yml
@@ -7,8 +7,9 @@ baseurl:     ""
 url:         "https://thinkolson.com"
 date_format: "%-d %B %Y"
 header_pages:
- - blog/index.html
  - about.md
+ - process.md
+ - blog/index.html
  - contact.html
 
 # Google services
@@ -24,7 +25,7 @@ bing_verification:
 animated:             false
 show_related_posts:   false
 show_post_footers:    true
-show_social_icons:    false
+show_social_icons:    true
 ajaxify_contact_form: false
 enable_mathjax: false
 extended_fonts: false
