--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ email:       will.olson11@gmail.com
 author:      Will Olson
 description: Solving your business's online problems.
 baseurl:     ""
-url:         "https://willolson.me"
+url:         "https://willolson.io"
 date_format: "%-d %B %Y"
 header_pages:
  - about.md
