--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ google_verification:
 # Use either direct GA implementation or set up GTM account
 # - using both will skew your data (leave blank to not use at all)
 google_analytics:
-google_tag_manager:
+google_tag_manager: GTM-MFSZ2WV
 # Bing services
 bing_verification:
 
