Update meta tags

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title:       Will Olson
 email:       will.olson11@gmail.com
 author:      Will Olson
-description: Solving your business's online problems.
+description: Web developer 🤓
 baseurl:     ""
 url:         "https://willolson.io"
 date_format: "%-d %B %Y"
