--- a/_config.yml
+++ b/_config.yml
@@ -55,11 +55,11 @@ github_username: frankolson
 reddit_username:
 bitbucket_username:
 stackoverflow_id:
-twitter_username: thinkolson
+twitter_username: AKitchenNerd
 skype_username:
 steam_nickname:
 google_plus_id:
-linkedin_username:
+linkedin_username: frankolson
 angellist_username:
 medium_id:
 bitcoin_url:
@@ -74,7 +74,7 @@ show_sharing_icons: false
 share_facebook: false
 share_twitter: true
 share_googleplus: false
-share_linkedin: false
+share_linkedin: true
 share_digg: false
 share_tumblr: false
 share_reddit: true
